fix(styles): update gapcursor styles

--- a/packages/remirror__styles/all.css
+++ b/packages/remirror__styles/all.css
@@ -3465,7 +3465,9 @@ button:active .remirror-menu-pane-shortcut,
     visibility: hidden;
   }
 }
-.remirror-editor .ProseMirror-focused .ProseMirror-gapcursor {
+.remirror-editor .ProseMirror-focused.ProseMirror-gapcursor,
+.remirror-editor .ProseMirror-focused .ProseMirror-gapcursor,
+.remirror-editor.ProseMirror-focused.ProseMirror-gapcursor {
   display: block;
 }
 
