--- a/packages/remirror__styles/extension-gap-cursor.css
+++ b/packages/remirror__styles/extension-gap-cursor.css
@@ -26,6 +26,8 @@
     visibility: hidden;
   }
 }
-.remirror-editor .ProseMirror-focused .ProseMirror-gapcursor {
+.remirror-editor .ProseMirror-focused.ProseMirror-gapcursor,
+.remirror-editor .ProseMirror-focused .ProseMirror-gapcursor,
+.remirror-editor.ProseMirror-focused.ProseMirror-gapcursor {
   display: block;
 }
